--- a/docker/nginx/mlflow.conf
+++ b/docker/nginx/mlflow.conf
@@ -8,6 +8,10 @@ server {
 
     # Configure NGINX to reverse proxy HTTP requests to the upstream server (uWSGI server)
     location / {
+        # Turn on auth for this location
+        auth_basic "Restricted Content";
+        auth_basic_user_file /etc/nginx/.htpasswd;
+
         # Define the location of the proxy server to send the request to
         proxy_pass http://web:5000;
 
